[package]
name = "socket_selector"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "A thin socket selector layer built on top of the mio layer."
repository = "https://github.com/Bruce0203/socket-selector"
license = "MIT"
readme = "README.md"
version = "0.1.3"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
mio = { version = "0.8.10", features = ["os-poll", "net"] }


